change gamehall and updatepassword

--- a/templates/current_datetime.html
+++ b/templates/current_datetime.html
@@ -39,7 +39,7 @@
 	<body>
 		<p>It is now {{ current_date }}.</p>
 		<canvas id = "canvas" width = "{{canvasWidth}}" height = "{{canvasHeight}}"></canvas>
-		<image id = "whitechess" class = "chess" src = "{{static}}images/white.png">
-		<image id = "blackchess" class = "chess" src = "{{static}}images/black.png">
+		<image id = "whitechess" class = "chess" src = "{{static}}images/white.png"/>
+		<image id = "blackchess" class = "chess" src = "{{static}}images/black.png"/>
 	</body>
 </html>
