--- a/templates/update_password.html
+++ b/templates/update_password.html
@@ -4,9 +4,8 @@
     <form action="/update_password/{{ id }}" method="POST">
         <div id="register-box">
             {% csrf_token %}
-            <div class="input-box">
-                <label class="pass_placeholder"> 账号：</label>
-                {{ form.username }}
+            <div class="output-box">
+                当前账号：{{ current_player.user.username }}
             </div>
             <div class="input-box">
                 <label class="pass_placeholder"> 当前密码：</label>
