--- a/templates/index.html
+++ b/templates/index.html
@@ -66,9 +66,55 @@
             font-family: "楷体";
             font-size: 20px;
         }
+        #mask{
+            position: absolute;
+            visibility: visible;
+            background-color: #444;
+            opacity: 0.75;
+            height: 100%;
+            width: 100%;
+            z-index: 2;
+        }
+        #error{
+            font-size: 25px;
+            margin-top: 15px;
+            font-family: "楷体";
+            text-align: center;
+        }
+        #exit{
+            position: absolute;
+            left: 45%;
+            font-family: "楷体";
+            font-size: 20px;
+            background-color: lightgreen;
+            -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.1);
+            border-radius: 5px;
+        }
+        #messagebox{
+            position: absolute;
+            visibility: visible;
+            width: 30%;
+            height: 13%;
+            z-index: 3;
+            border: solid lightcoral;
+            border-radius: 10px;
+            background-image: url(../static/images/container.jpg);
+            top: 40%;
+            left: 35%;
+        }
     </style>
 </head>
 <body style = "text-align: center;;">
+{% if error %}
+<div id="mask">
+    <div id="messagebox">
+    {% if error %}
+        <p id="error">{{error}}</p>
+    {% endif %}
+        <button id="exit">确定</button>
+    </div>
+</div>
+{% endif %}
     <div class="container" style="background-image: url(../static/images/container.jpg)">
         <div id="title" style="width: 100%;height: 200px;">
             <img src="../static/images/title.png">
@@ -110,7 +156,7 @@
                     <div class="col-sm-2">积分</div>
                     <div class="col-sm-2">状态</div>
                 </div>
-                <div id="friend_info" style=" overflow-y: auto; height: 150px;">
+                <div id="friend_info" style=" overflow-y: auto; height: 200px;">
                     {%  for player in players %}
                     <div class="row">
                         <div class="col-sm-2" style="height:20px;width:20px;background-image: url({{ player.image }}); background-size: 100% 100%;"></div>
@@ -128,7 +174,6 @@
                 <div id="sendMessage">
                     <form action='/add_friend/{{ id }}' method="POST">
                     {% csrf_token %}
-                    {{ form.username.errors }}
                     <div class="input-box">
                         <label class="placeholder">账号：</label>
                         {{ form.username }}
@@ -137,7 +182,6 @@
                     </form>
                     <form action='/check_friend_info/{{ id }}' method="POST">
                         {% csrf_token %}
-                        {{ form_check_info.username.errors }}
                         <div class="input-box">
                             <label class="placeholder">账号：</label>
                             {{ form_check_info.username }}
@@ -159,6 +203,11 @@
             <img src="../static/images/2.png">
         </div>
     </div>
-
+    <script>
+        $('#exit').click(function(){
+            $('#mask').css("visibility","hidden");
+            $('#messagebox').css("visibility","hidden");
+        })
+    </script>
     </body>
 </html>
