--- a/templates/current_datetime.html
+++ b/templates/current_datetime.html
@@ -34,12 +34,14 @@
 			whitechess.src = "{{static}}images/white.png";
 		</script>
 		<script src = "{{static}}js/main.js"></script>
+		<script src = "{{static}}js/game.js"></script>
 
 	</head>
 	<body>
 		<p>It is now {{ current_date }}.</p>
 		<canvas id = "canvas" width = "{{canvasWidth}}" height = "{{canvasHeight}}"></canvas>
-		<image id = "whitechess" class = "chess" src = "{{static}}images/white.png"/>
-		<image id = "blackchess" class = "chess" src = "{{static}}images/black.png"/>
+		<image id = "whitechess" class = "chess" src = "{{static}}images/white.png">
+		<image id = "blackchess" class = "chess" src = "{{static}}images/black.png">
+		<p id = time style = "position: fixed;z-index = 4"></p>
 	</body>
 </html>
