--- a/templates/friend_info.html
+++ b/templates/friend_info.html
@@ -7,7 +7,7 @@
         <div class="output-box">游戏状态：{{ player.game_state }}</div>
         <div class="output-box">游戏场次：{{ player.game_num }}</div>
         <div class="output-box">游戏积分：{{ player.game_grade }}</div>
-        <form action='/to_index/{{ player.id }}' method="POST">
+        <form action='/to_index/{{ id }}' method="POST">
             {% csrf_token %}
             <input id="finfo_button_return" type="submit" value="返回"/>
         </form>
