--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src = "{{static}}js/jquery-1.11.3.min.js"></script>
-    <script src = "{{static}}js/main.js"></script>
+    <script src = "../static/js/jquery-1.11.3.min.js"></script>
+    <script src = "../static/js/main.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script type="text/javascript">
         selfid = {{selfid}};
@@ -185,10 +185,11 @@
                     <p style="font-family: '楷体'; font-size: 30px; width:80%; float: left">欢迎来到大厅：{{ current_player.user.username }}</p>
                 </div>
                 <div id="sendMessage">
-                   <div>
-                        <input type = "text" id = "receiver"/>
-                        <button onclick = "addFriend()"></button>
+                   <div class="input-box">
+                        <label class="placeholder">账号：</label>
+                        <input type = "text" id = "receiver" class="text-input"/>
                     </div>
+                    <button onclick = "addFriend()" id="button_return">添加好友</button>
                     <form action='/check_friend_info/{{ id }}' method="POST">
                         {% csrf_token %}
                         <div class="input-box">
