--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
     </script>
     <style>
         #sendMessage{
-            height: 300px;
+            height: 270px;
             margin-top: 20px;
             border: 1px solid #000;
             border-radius: 5px;
@@ -163,6 +163,12 @@
             </div>
             <div class = "col-sm-4" style = "background: url(../static/images/listbg.jpg); height: 600px">
                 <div class="row">
+                    <div class="btn-group btn-group-justified">
+                        <a href="#" class="btn btn-primary" style="background-color: darkgreen;font-family: '楷体';">在线人列表</a>
+                        <a href="#" class="btn btn-primary" style="background-color: darkgreen;font-family: '楷体';">我的好友</a>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-sm-1"></div>
                     <div class="col-sm-3">昵称</div>
                     <div class="col-sm-3">账号</div>
@@ -182,7 +188,7 @@
                 </div>
                 <div id="current_info" style="border-bottom:2px solid #000; height: 50px">
                     <img style="margin-top:10px;height: 30px; width: 30px; float: left;" src="{{ current_player.image }}">
-                    <p style="font-family: '楷体'; font-size: 30px; width:80%; float: left">欢迎来到大厅：{{ current_player.user.username }}</p>
+                    <p style="font-family: '楷体'; font-size: 20px; width:80%; float: left">欢迎来到大厅：{{ current_player.user.username }}</p>
                 </div>
                 <div id="sendMessage">
                    <div class="input-box">
