--- a/templates/index.html
+++ b/templates/index.html
@@ -164,8 +164,8 @@
             <div class = "col-sm-4" style = "background: url(../static/images/listbg.jpg); height: 600px">
                 <div class="row">
                     <div class="btn-group btn-group-justified">
-                        <a href="#" class="btn btn-primary" style="background-color: darkgreen;font-family: '楷体';">在线人列表</a>
-                        <a href="#" class="btn btn-primary" style="background-color: darkgreen;font-family: '楷体';">我的好友</a>
+                        <a href="#" id="online_players" class="btn btn-primary" style="background-color: darkgreen;font-family: '楷体';">在线人列表</a>
+                        <a href="#" id="friend_players" class="btn btn-primary" style="background-color: darkgreen;font-family: '楷体';">我的好友</a>
                     </div>
                 </div>
                 <div class="row">
@@ -175,7 +175,7 @@
                     <div class="col-sm-2">积分</div>
                     <div class="col-sm-2">状态</div>
                 </div>
-                <div id="friend_info" style=" overflow-y: auto; height: 200px;">
+                <div id="online_info" style=" overflow-y: auto; height: 200px; display: block;">
                     {%  for player in players %}
                     <div class="row">
                         <div class="col-sm-2" style="height:20px;width:20px;background-image: url({{ player.image }}); background-size: 100% 100%;"></div>
@@ -183,6 +183,17 @@
                         <div class="col-sm-3">{{ player.user.username }}</div>
                         <div class="col-sm-2">{{ player.game_grade }}</div>
                         <div class="col-sm-2">{{ player.game_state }}</div>
+                    </div>
+                    {% endfor %}
+                </div>
+                <div id="friend_info" style=" overflow-y: auto; height: 200px; display: none;">
+                    {%  for friend in friends %}
+                    <div class="row">
+                        <div class="col-sm-2" style="height:20px;width:20px;background-image: url({{ friend.image }}); background-size: 100% 100%;"></div>
+                        <div class="col-sm-3" style="text-align: center">{{ friend.nick_name }}</div>
+                        <div class="col-sm-3">{{ friend.user.username }}</div>
+                        <div class="col-sm-2">{{ friend.game_grade }}</div>
+                        <div class="col-sm-2">{{ friend.game_state }}</div>
                     </div>
                     {% endfor %}
                 </div>
@@ -223,7 +234,15 @@
         $('#exit').click(function(){
             $('#mask').css("visibility","hidden");
             $('#messagebox').css("visibility","hidden");
-        })
+        });
+        $('#online_players').click(function(){
+            $('#online_info').css("display","block");
+            $('#friend_info').css("display","none");
+        });
+        $('#friend_players').click(function(){
+            $('#online_info').css("display","none");
+            $('#friend_info').css("display","block");
+        });
     </script>
     </body>
 </html>
