--- a/templates/index.html
+++ b/templates/index.html
@@ -194,7 +194,7 @@
                         <div class="col-sm-3">{{ friend.user.username }}</div>
                         <div class="col-sm-2">{{ friend.game_grade }}</div>
                         <div class="col-sm-2">{{ friend.game_state }}</div>
-                        <input action="/delete_frend/{{ id }}/{{ friend.id }}" type="button" value="删除好友"/>
+                        <input action="/delete_friend/{{ id }}/{{ friend.id }}" type="button" value="删除好友"/>
                     </div>
                     {% endfor %}
                 </div>
