--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,7 @@
+@font-face {
+	font-family: "繁楷";
+	src: url(../fonts/124.ttf);
+}
 #main-container{
 	position: absolute;
 	overflow: hidden;
@@ -18,13 +22,13 @@
 }
 #error{
 	font-size: 25px;
-	font-family: "楷体";
+	font-family: "繁楷";
 	text-align: center;
 }
 #exit{
 	position: absolute;
 	left: 45%;
-	font-family: "楷体";
+	font-family: "繁楷";
 	font-size: 20px;
 	background-color: lightgreen;
 	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.1);
@@ -72,7 +76,7 @@
 	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.1);
 	border-radius: 5px;
 	left: 22%;
-	font-family: "楷体";
+	font-family: "繁楷";
 	font-size: 30px;
 }
 #login_button_reg {
@@ -82,7 +86,7 @@
 	border-radius: 5px;
 	bottom: 33%;
 	left: 35%;
-	font-family: "楷体";
+	font-family: "繁楷";
 	font-size: 30px;
 }
 #reg_button_login {
@@ -92,7 +96,7 @@
 	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.1);
 	border-radius: 5px;
 	left: 22%;
-	font-family: "楷体";
+	font-family: "繁楷";
 	font-size: 30px;
 }
 #reg_button_return{
@@ -102,7 +106,7 @@
 	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.1);
 	border-radius: 5px;
 	left: 35%;
-	font-family: "楷体";
+	font-family: "繁楷";
 	font-size: 30px;
 }
 #info_button_login {
@@ -112,7 +116,7 @@
 	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.1);
 	border-radius: 5px;
 	left: 10%;
-	font-family: "楷体";
+	font-family: "繁楷";
 	font-size: 30px;
 }
 #info_button_reg {
@@ -122,7 +126,7 @@
 	border-radius: 5px;
 	bottom: 30%;
 	left: 35%;
-	font-family: "楷体";
+	font-family: "繁楷";
 	font-size: 30px;
 }
 #info_button_return{
@@ -132,7 +136,7 @@
 	border-radius: 5px;
 	bottom: 30%;
 	left: 75%;
-	font-family: "楷体";
+	font-family: "繁楷";
 	font-size: 30px;
 }
 #finfo_button_return{
@@ -142,7 +146,7 @@
 	border-radius: 5px;
 	bottom: 30%;
 	left: 75%;
-	font-family: "楷体";
+	font-family: "繁楷";
 	font-size: 30px;
 }
 #pass_button_login {
@@ -152,7 +156,7 @@
 	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.1);
 	border-radius: 5px;
 	left: 22%;
-	font-family: "楷体";
+	font-family: "繁楷";
 	font-size: 30px;
 }
 #pass_button_return{
@@ -162,7 +166,7 @@
 	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.1);
 	border-radius: 5px;
 	left: 33%;
-	font-family: "楷体";
+	font-family: "繁楷";
 	font-size: 30px;
 }
 #view{
@@ -199,7 +203,7 @@
 	-webkit-border-radius: 3px;
 	border:1px solid rgba(0,0,0,0.1);
 	height: 35px;
-	font-family: "楷体";
+	font-family: "繁楷";
 	font-size: 25px;
 }
 .text-input{
@@ -235,7 +239,7 @@
     width: 80%;
     height: 35px;
     font-size:25px;
-	font-family: "楷体";
+	font-family: "繁楷";
     -webkit-transition: background .2s ease;
     border-radius:3px;
 }
@@ -248,7 +252,7 @@
     width: 80%;
     height: 35px;
     font-size: 25px;
-    font-family: "楷体";
+    font-family: "繁楷";
     -webkit-transition: background .2s ease;
     border-radius: 3px;
 }
@@ -256,7 +260,7 @@
 	float: left;
 	width: 20%;
 	height: 100%;
-	font-family: "楷体";
+	font-family: "繁楷";
 	font-size: 25px;
 }
 .pass_text-input{
@@ -276,6 +280,6 @@
 	float: left;
 	width: 35%;
 	height: 100%;
-	font-family: "楷体";
+	font-family: "繁楷";
 	font-size: 25px;
 }
