--- a/templates/index.html
+++ b/templates/index.html
@@ -48,8 +48,8 @@
             m.roomid = roomid;
             m.role = a[2];
             console.log(m);
-            addMessage(m);
-            messageLoop();
+            //addMessage(m);
+            //messageLoop();
             location = 'room' + roomid + '/' + selfid;
         }
         window.onload = function(){
