--- a/templates/room.html
+++ b/templates/room.html
@@ -24,7 +24,7 @@
 			var blackchess;
 			var whitechess;
 			var selfid = {{selfid}};
-			var enemyid = {{enemyid}};
+			var enemyid{{enemyid}};			
 			var mycolor = {{mycolor}};//2 for white 1 for black
 			var enemycolor = {{enemycolor}};
 			var ifmyturn = {{ifmyturn}};
