--- a/templates/room.html
+++ b/templates/room.html
@@ -41,8 +41,8 @@
 	<body>
 		<p>It is now {{ current_date }}.</p>
 		<canvas id = "canvas" width = "{{canvasWidth}}" height = "{{canvasHeight}}"></canvas>
-		<image id = "whitechess" class = "chess" src = "{{static}}images/white.png">
-		<image id = "blackchess" class = "chess" src = "{{static}}images/black.png">
+		<image id = "whitechess" class = "chess" src = "{{static}}images/white.png"/>
+		<image id = "blackchess" class = "chess" src = "{{static}}images/black.png"/>
 		<p id = time style = "position: fixed;z-index = 4"></p>
 	</body>
 </html>
