--- a/templates/room.html
+++ b/templates/room.html
@@ -1,11 +1,10 @@
-<h1>welcome:{{selfid}}</h1>
 <html>
 	<head>
-		<script src = "{{static}}js/jquery-1.11.3.min.js"></script>
+		<script src = "../static/js/jquery-1.11.3.min.js"></script>
 		<style type="text/css">
 			#canvas{
-				background: url("{{static}}images/chessboard.jpg");
-				position: absolute;
+                position: absolute;
+				background: url("../static/images/chessboard.jpg");
 				left: 10px;
 				top: 10px;
 			}
@@ -15,6 +14,35 @@
 				visibility: hidden;
 				z-index: 10;
 			}
+            #main-contain{
+                width: 100%;
+                height: 490px;
+            }
+            #left_info{
+                position: absolute;
+                width: 230px;
+                border: solid lightcoral;
+	            border-radius: 10px;
+            }
+            #right_info{
+                position: absolute;
+                width: 230px;
+                border: solid lightcoral;
+	            border-radius: 10px;
+            }
+            #user_info{
+                width: 100%;
+                height: 40%;
+            }
+            #user_name{
+                width: 100%;
+                height: 40%;
+            }
+            #user_img{
+                width: 100%;
+                height: 60%;
+            }
+
 		</style>
 		<script type="text/javascript">
 			var boardwidth = {{boardwidth}};
@@ -30,19 +58,79 @@
 			var ifmyturn = {{ifmyturn}};
 			var ifowner = {{ifowner}};
 			blackchess = new Image();
-			blackchess.src = "{{static}}images/black.png";
+			blackchess.src = "../static/images/black.png";
 			whitechess = new Image();
-			whitechess.src = "{{static}}images/white.png";
+			whitechess.src = "../static/images/white.png";
 		</script>
-		<script src = "{{static}}js/main.js"></script>
-		<script src = "{{static}}js/game.js"></script>
+		<script src = "../static/js/main.js"></script>
+		<script src = "../static/js/game.js"></script>
 
 	</head>
 	<body>
-		<p>It is now {{ current_date }}.</p>
-		<canvas id = "canvas" width = "{{canvasWidth}}" height = "{{canvasHeight}}"></canvas>
-		<image id = "whitechess" class = "chess" src = "{{static}}images/white.png">
-		<image id = "blackchess" class = "chess" src = "{{static}}images/black.png">
-		<p id = time style = "position: fixed;z-index = 4"></p>
+        <div id="title" style="width: 100%; height: 200px;">
+            <img style="position:absolute; left: 37%;" src="../static/images/title.png">
+        </div>
+        <div id="main-contain">
+            <div id="left_info">
+                <div id="user_info">
+                    <div id="user_name ">
+
+                    </div>
+                    <div id="user_img">
+                        <img src=""/>
+                    </div>
+                </div>
+                <div id="time_left" style="height: 20%; width: 100%;">
+
+                </div>
+                <div id="button_list" style="height: 40%; width: 100%">
+                    <button id="start" style="width: 100%; height: 25%">开始</button>
+                    <button id="peace" style="width: 100%; height: 25%">求和</button>
+                    <button id="lose" style="width: 100%; height: 25%">认输</button>
+                    <button id="regret" style="width: 100%; height: 25%">悔棋</button>
+                </div>
+            </div>
+            <canvas id = "canvas" width = "{{canvasWidth}}" height = "{{canvasHeight}}"></canvas>
+            <div id="right_info">
+                <div id="user_info">
+                    <div id="user_img">
+                        <img src=""/>
+                    </div>
+                    <div id="user_name">
+
+                    </div>
+                </div>
+                <div id="time_left" style="height: 20%; width: 100%;">
+
+                </div>
+                <div id="enemy_info" style="height: 40%; width: 100%">
+                    <div id="output-box" style="height: 20%; width: 100%">
+
+                    </div>
+                    <button id="letgo" style="height: 25%;width: 100%">踢出房间</button>
+                </div>
+            </div>
+        </div>
+        <button id="exit" style="position:absolute;top: 750px; height: 50px;width: 300px;">退出房间</button>
+
+        <!--
+		<image id = "whitechess" class = "chess" src = "../static/images/white.png"/>
+		<image id = "blackchess" class = "chess" src = "../static/images/black.png"/>
+		<p id = time style = "position: fixed; z-index = 4;"></p>
+		-->
 	</body>
+<script>
+    var height = window.innerHeight;
+    var width = window.innerWidth;
+    $('#canvas').css('top',$('#title').css('height'));
+    $('#canvas').css('left',width/2-245+'px');
+    $('#left_info').css('height',$('#canvas').css('height'));
+    $('#left_info').css('top',$('#canvas').css('top'));
+    $('#left_info').css('right',width/2+250+'px');
+    $('#right_info').css('height',$('#canvas').css('height'));
+    $('#right_info').css('top',$('#canvas').css('top'));
+    $('#right_info').css('left',width/2+300+'px');
+    $('#exit').css('left',width/2-150+'px');
+
+</script>
 </html>
