--- a/templates/index.html
+++ b/templates/index.html
@@ -181,7 +181,7 @@
         </div>
         <div class="row">
             <div class="btn-group btn-group-justified">
-                <a href="/random_match/{{ id }}" class="btn btn-primary">b1</a>
+                <a href="/random_match/{{ id }}" class="btn btn-primary">随机匹配</a>
                 <a href="#" class="btn btn-primary">b2</a>
                 <a href="#" class="btn btn-primary">b3</a>
             </div>
