--- a/templates/index.html
+++ b/templates/index.html
@@ -211,7 +211,7 @@
             <div class = "col-sm-4" style = "background: url(../static/images/listbg.jpg); height: 600px">
                 <div class="row">
                     <div class="btn-group btn-group-justified">
-                        <a href="#" id="online_players" class="btn btn-primary" style="background-color: darkgreen;font-family: '繁楷';">在线人列表</a>
+                        <a href="#" id="online_players" class="btn btn-primary" style="background-color: darkgreen;font-family: '繁楷';">积分排行榜</a>
                         <a href="#" id="friend_players" class="btn btn-primary" style="background-color: darkgreen;font-family: '繁楷';">我的好友</a>
                     </div>
                 </div>
